# ChangeLog for dev-python/mwlib
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/mwlib/ChangeLog,v 1.32 2014/06/06 14:14:53 dev-zero Exp $

*mwlib-0.15.15 (06 Jun 2014)

  06 Jun 2014; Tiziano Müller <dev-zero@gentoo.org> +mwlib-0.15.15.ebuild:
  Version bump.

*mwlib-0.15.14 (30 Jan 2014)

  30 Jan 2014; Tiziano Müller <dev-zero@gentoo.org> +mwlib-0.15.14.ebuild:
  Version bump.

*mwlib-0.15.12 (27 Nov 2013)

  27 Nov 2013; Tiziano Müller <dev-zero@gentoo.org> +mwlib-0.15.12.ebuild,
  -files/0.15.8-fix-tests.patch,
  -files/0.15.8-nslave-add-address-parameter.patch, -mwlib-0.14.0.ebuild,
  -mwlib-0.14.1.ebuild, -mwlib-0.14.3.ebuild, -mwlib-0.15.3.ebuild,
  -mwlib-0.15.6.ebuild, -mwlib-0.15.7.ebuild, -mwlib-0.15.8-r1.ebuild,
  -mwlib-0.15.8-r3.ebuild, -mwlib-0.15.8.ebuild:
  Version bump (bug #481470). Drop old versions.

  12 Sep 2013; Michał Górny <mgorny@gentoo.org> mwlib-0.14.0.ebuild,
  mwlib-0.14.1.ebuild, mwlib-0.14.3.ebuild, mwlib-0.15.3.ebuild,
  mwlib-0.15.6.ebuild, mwlib-0.15.7.ebuild, mwlib-0.15.8-r1.ebuild,
  mwlib-0.15.8-r3.ebuild, mwlib-0.15.8.ebuild:
  Replace virtual/pyparsing dep with dev-python/pyparsing. The split versions
  were removed and all in-tree versions support all impls now.

*mwlib-0.15.10 (26 Jul 2013)

  26 Jul 2013; Ian Delaney <idella4@gentoo.org> +mwlib-0.15.10.ebuild:
  bump; rm 1 test wrt Bug #474874, usual upgrade of deps

*mwlib-0.15.8-r3 (03 Jul 2013)

  03 Jul 2013; Tiziano Müller <dev-zero@gentoo.org>
  +files/mwlib-purge-cache.cron-r1, +files/nslave.confd-r1,
  +files/nslave.initd-r1, +files/postman.initd-r1, +mwlib-0.15.8-r3.ebuild,
  -files/mwlib-purge-cache.cron, -files/nslave.confd, -files/nslave.initd,
  -files/postman.initd, -mwlib-0.15.8-r2.ebuild:
  Fix typos in init.d/conf.d and cronjob files.

*mwlib-0.15.8-r2 (01 Jul 2013)

  01 Jul 2013; Tiziano Müller <dev-zero@gentoo.org>